namespace AI.CVScreening.Domain.Enums;

public enum GapSeverity
{
    Low = 1,
    Medium = 2,
    High = 3
}
