namespace AI.CVScreening.Domain.Enums;

public enum RequirementPriority
{
    Low = 1,
    Medium = 2,
    High = 3,
    Critical = 4
}
