namespace AI.CVScreening.Domain.Enums;

public enum RequirementType
{
    Skill = 1,
    Experience = 2,
    Project = 3,
    Education = 4,
    Certification = 5
}
